feat: add ZGC tuning flags (ZGenerational, THP, ExitOnOOM, DisableExplicitGC)
Add four JVM flags with inline why-comments:
- -XX:+UnlockExperimentalVMOptions / -XX:+ZGenerational: generational
  ZGC for lower young-object GC overhead
- -XX:+ExitOnOutOfMemoryError: exit on OOM per project's no-recovery
  philosophy
- -XX:+DisableExplicitGC: prevent spurious full cycles from
  System.gc()
- -XX:+UseTransparentHugePages: Linux THP reduces TLB miss during
  ZGC scan (no-op on other platforms)

Sync README example command to match.