@@ -12,5 +12,10 @@
 ## 参考启动命令
 
 ```powershell
-.\jre\bin\javaw.exe -Xms1g -Xmx8g -XX:+UseZGC -cp "beatoraja.jar;ir/*" bms.player.beatoraja.MainLoader
+.\jre\bin\javaw.exe ^
+    -Xms1g -Xmx8g ^
+    -XX:+UnlockExperimentalVMOptions -XX:+UseZGC -XX:+ZGenerational ^
+    -XX:+ExitOnOutOfMemoryError -XX:+DisableExplicitGC ^
+    -XX:+UseTransparentHugePages ^
+    -cp "beatoraja.jar;ir/*" bms.player.beatoraja.MainLoader
 ```
